@@ -1,3 +1,13 @@
+2007-02-09  Dalibor Topic  <robilad@kaffe.org>
+
+	* Makefile.am (pscan, flawfinder, rats, splint): Added new targets
+	which invoke source code scanners.
+
+	* configure.ac (AC_CHECK_PATH): Check for pscan, flawfinder, rats and
+	splint.
+
+	* Makefile.in, lib/Makefile.in, configure: Regenerated.
+
 2007-02-08  Dalibor Topic  <robilad@kaffe.org>
 
 	* configure.ac (AC_MSG_ERROR): Stop configure if neither ftruncate 
